# velvet-optional

./: Cargo.toml
crates/vb_codegen/: Cargo.toml
crates/vb_codegen/src/: generated_storage_helpers.rs.txt  kani_generated_runtime.rs  lib.rs  parity.rs  proptests.rs  tests.rs
crates/vb_codegen/src/codegen/: mod.rs  structs.rs  types.rs
crates/vb_codegen/tests/: contract.md  generate_fixtures.rs  integration_compile_codegen_pipeline.rs  integration_compile_codegen_runtime_e2e.rs  trybuild_tests.rs  vb_0sps_generated_ir_parity_bdd.rs  vb_kyyf_cross_run_determinism.rs  vb_test_compile_codegen_emit_behavior.rs
crates/vb_codegen/tests/compile-fail/: forbid_panic.rs  forbid_panic.stderr  forbid_unchecked_indexing.rs  forbid_unchecked_indexing.stderr  forbid_unsafe.rs  forbid_unsafe.stderr  forbid_unwrap.rs  forbid_unwrap.stderr  forbid_yaml_import.rs  forbid_yaml_import.stderr
crates/vb_codegen/tests/compile-fail/pass/: minimal_workflow.rs
crates/vb_ui/: Cargo.toml
crates/vb_ui/src/: app_state.rs  domain.rs  draw_helpers.rs  event_handlers.rs  graph_builder.rs  graph_builder_tests.rs  graph_renderer.rs  ipc_bridge.rs  ipc_wiring.rs  layout.rs  lib.rs  main.rs
crates/vb_ui/src/execution_observatory/: mod.rs  screen.rs
crates/vb_ui/src/incident/: console.rs  mod.rs  repair.rs  screen.rs  timeline.rs  types.rs
crates/vb_ui/src/incident/screen/: colors.rs  screen_ui.rs  tests.rs  types.rs
crates/vb_ui/src/registry/: mod.rs
crates/vb_ui/src/replay/: controller.rs  diff_engine.rs  engine.rs  graph_overlay.rs  mod.rs  screen.rs  slot_panel.rs  state.rs  ticket_panel.rs  timeline.rs  transport.rs  types.rs
crates/vb_ui/src/system/: alerts.rs  lanes.rs  latency.rs  map.rs  metrics.rs  mod.rs  queue_monitor.rs  queue_panel.rs  queues.rs  renderer.rs  screen.rs  ticker.rs  topology.rs
crates/vb_ui/src/system/lanes/: health.rs  models.rs  segments.rs  tests.rs
crates/vb_ui/src/system/screen/: layout_models.rs  orchestration.rs  overview.rs  tests.rs
crates/vb_ui/src/theme/: animation.rs  colors.rs  glow.rs  mod.rs  motion.rs  tokens_generated.rs  typography.rs
crates/vb_ui/src/verify/: action_policy.rs  certificate_panel.rs  certificates.rs  certificates_tests.rs  durability.rs  durability_tests.rs  mod.rs  resources.rs  screen.rs  taint.rs  taint_overlay.rs
crates/vb_ui/src/workflow/: canvas.rs  execution_details.rs  mod.rs  node_mapping.rs
crates/vb_ui/src/workflow/canvas/: canvas_area.rs  graph.rs  tests.rs  types.rs
crates/vb_ui_makepad/: Cargo.toml
crates/vb_ui_makepad/src/: error.rs  graph_canvas.rs  graph_edge.rs  graph_node.rs  lib.rs  packet_dot.rs  shell.rs  tokens.rs
crates/vb_ui_makepad/src/tokens/: color.rs  layout.rs  parse.rs  radius.rs  sections.rs  shadow.rs  space.rs
crates/vb_ui_makepad/tests/: shell_reachability.rs  targeted_gaps_coverage.rs  untested_pub_fns.rs
crates/vb_ui_model/: Cargo.toml
crates/vb_ui_model/src/: ai.rs  canonical.rs  incident.rs  lib.rs  redact.rs  replay.rs  run.rs  storage.rs  system.rs  verify.rs  workflow.rs
crates/vb_ui_model/src/emitter/: error.rs  mod.rs  yaml.rs
crates/vb_ui_model/src/emitter/binary/: mod.rs  tests.rs
crates/vb_ui_model/src/envelope/: error.rs  mod.rs  types.rs
crates/vb_ui_model/src/envelope/output/: mod.rs  tests.rs
crates/vb_ui_model/tests/: bundle_tests.rs  cli_integration.rs  envelope_schema_tests.rs  ui_release_errors.rs  ui_release_gates.rs  ui_release_tooling_red_phase.rs  vb_8ma2_workspace_assertions.rs  vb_ahfl_canonicalization_no_false_parity.rs  vb_nf2u_ui_release_acceptance.rs  vb_qi37_25_quality_gates.rs
crates/vb_ui_snapshot/: Cargo.toml
crates/vb_ui_snapshot/kani/: inventory.rs  layout_predicates.rs
crates/vb_ui_snapshot/src/: checks.rs  error.rs  fixtures.rs  layout_kernel.rs  lib.rs  redaction.rs  report.rs  snapshot.rs  tokens.rs
crates/vb_ui_snapshot/src/checks/: color_spell.rs  fixture_parser.rs  image.rs
crates/vb_ui_snapshot/src/fixtures/: execution.rs  registry.rs  replay.rs  verification.rs
crates/vb_ui_snapshot/src/fixtures/execution/: details.rs  overview.rs  workflow.rs
crates/vb_ui_snapshot/src/tokens/: codegen.rs  parse.rs
crates/vb_ui_snapshot/tests/: comprehensive_unchecked.rs  image_checks.rs  inventory_bijection.rs  layout_checks.rs  layout_kernel_checks.rs  redaction_checks.rs  report_checks.rs  report_evidence_shape.rs  snapshot_checks.rs  tokens_codegen_checks.rs
(+5 files in other folders)
