[workspace]
resolver = "3"
members = [
    "crates/vb_codegen",
    "crates/vb_ui",
    "crates/vb_ui_makepad",
    "crates/vb_ui_model",
    "crates/vb_ui_snapshot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# shared deps needed by deferred crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
