[package]
name = "vb_codegen"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true
vb_core = { path = "../vb_core" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
trybuild.workspace = true
vb_runtime = { path = "../vb_runtime" }

[lints]
workspace = true
