[package]
name = "vb_ui"
version = "0.1.0"
edition = "2024"

[lib]
name = "vb_ui"
path = "src/lib.rs"

[[bin]]
name = "vb-ui"
path = "src/main.rs"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "20b6c53b6f229b165fe7f813504ae93405159d27" }
vb_ipc = { path = "../vb_ipc" }
vb_core = { path = "../vb_core" }
vb_storage = { path = "../vb_storage" }
vb_ui_model = { path = "../vb_ui_model" }
crossbeam-channel = "0.5"
postcard = { version = "1", features = ["alloc"] }
seahash = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
indexmap = "2"

[package.metadata.cargo-machete]
ignored = ["serde"]

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
string_slice = "deny"
get_unwrap = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
let_underscore_must_use = "deny"
await_holding_lock = "deny"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
result_large_err = "warn"
