[package]
name = "vb_ui_makepad"
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
publish = false

[dependencies]
makepad-widgets = { version = "1", default-features = false }
toml = "0.9"

[dev-dependencies]
vb_ui_snapshot = { path = "../vb_ui_snapshot" }

[package.metadata.cargo-machete]
ignored = ["makepad-widgets"]

[lints]
workspace = true
