[package]
name = "vb_ui_snapshot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "UI snapshot test infrastructure for Velvet Ballistics Makepad screens"
publish = false

[features]
default = ["std"]
std = ["serde/std", "dep:saphyr"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
saphyr = { workspace = true, optional = true }
toml = "0.9"
vb_ui_model = { path = "../vb_ui_model" }
anyhow = "1"
png = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[lints]
workspace = true

[dev-dependencies]
 tempfile = { workspace = true }
 proptest = { workspace = true }
